--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clsx": "^2.1.1",
     "next": "15",
     "next-auth": "5.0.0-beta.25",
-    "pg": "^8.16.3",
+    "pg": "^8.11.3",
     "postcss": "8.5.1",
     "postgres": "^3.4.6",
     "react": "latest",
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.7",
+    "@types/pg": "^8.10.5",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3"
   },
