--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "10.4.20",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "next": "15",
     "next-auth": "5.0.0-beta.25",
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "22.10.7",
     "@types/pg": "^8.10.5",
     "@types/react": "19.0.7",
