--- a/amplify.yml
+++ b/amplify.yml
@@ -4,6 +4,8 @@ frontend:
     preBuild:
       commands:
         - npm ci
+        - npx prisma generate
+        - npx prisma migrate deploy
     build:
       commands:
         - npm run build
