--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.17.1",
     "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "10.4.20",
     "bcryptjs": "^3.0.2",
@@ -29,7 +30,8 @@
     "@types/node": "22.10.7",
     "@types/pg": "^8.10.5",
     "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3"
+    "@types/react-dom": "19.0.3",
+    "prisma": "^6.17.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
