--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "migrate": "prisma migrate deploy",
-    "postinstall": "prisma generate"
+    "dev": "next dev",
+    "start": "next start"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -19,28 +17,33 @@
     "pg": "^8.11.3",
     "postcss": "8.5.1",
     "postgres": "^3.4.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "latest",
+    "react-dom": "latest",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
     "zod": "^3.25.17"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "22.10.7",
     "@types/pg": "^8.10.5",
-    "@types/react": "18.2.66",
-    "@types/react-dom": "18.2.22",
+    "@types/react": "19.0.7",
+    "@types/react-dom": "19.0.3",
     "prisma": "^6.17.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "bcryptjs",
+      "bcrypt",
       "sharp"
     ]
-  },
-  "engines": {
-    "node": ">=18.17.0"
+"scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "lint": "next lint",
+  "postinstall": "prisma generate"
+},
   }
 }
