--- a/amplify.yml
+++ b/amplify.yml
@@ -3,7 +3,8 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm ci
+        - npm ci --legacy-peer-deps
+        - rm -rf .next
         - npx prisma generate
     build:
       commands:
@@ -15,4 +16,3 @@ frontend:
   cache:
     paths:
       - node_modules/**/*
-      - .next/cache/**/*
