--- a/amplify.yml
+++ b/amplify.yml
@@ -3,8 +3,7 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm ci --legacy-peer-deps
-        - rm -rf .next
+        - npm ci
         - npx prisma generate
     build:
       commands:
@@ -16,3 +15,4 @@ frontend:
   cache:
     paths:
       - node_modules/**/*
+      - .next/cache/**/*
