--- a/amplify.yml
+++ b/amplify.yml
@@ -5,6 +5,7 @@ frontend:
       commands:
         - npm ci
         - npx prisma generate
+        - npm rebuild bcrypt --build-from-source
     build:
       commands:
         - npm run build
