--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@prisma/client": "^6.17.1",
     "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "10.4.20",
-    "bcryptjs": "^3.0.2",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "next": "14.2.18",
     "next-auth": "5.0.0-beta.25",
@@ -28,18 +28,10 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/bcryptjs": "^2.4.6",
     "@types/node": "22.10.7",
     "@types/pg": "^8.10.5",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
     "prisma": "^6.17.1"
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "bcrypt",
-      "sharp"
-    ]
-
   }
 }
