--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.17.1",
     "@tailwindcss/forms": "^0.5.10",
+    "@types/bcrypt": "^5.0.2",
+    "@types/node": "22.10.7",
+    "@types/pg": "^8.10.5",
+    "@types/react": "19.0.7",
+    "@types/react-dom": "19.0.3",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
@@ -19,6 +24,7 @@
     "pg": "^8.11.3",
     "postcss": "8.5.1",
     "postgres": "^3.4.6",
+    "prisma": "^6.17.1",
     "react": "latest",
     "react-dom": "latest",
     "tailwindcss": "3.4.17",
@@ -26,12 +32,5 @@
     "use-debounce": "^10.0.4",
     "zod": "^3.25.17"
   },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "22.10.7",
-    "@types/pg": "^8.10.5",
-    "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3",
-    "prisma": "^6.17.1"
-  }
+  "devDependencies": {}
 }
