--- a/amplify.yml
+++ b/amplify.yml
@@ -3,9 +3,7 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm ci --include=dev
-        - npx prisma generate
-        - npm rebuild bcrypt --build-from-source
+        - npm ci
     build:
       commands:
         - npm run build
