--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "seed": "node -r dotenv/config ./scripts/seed.js"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -16,12 +17,14 @@
     "@types/pg": "^8.10.5",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
+    "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "next": "14.2.18",
     "next-auth": "5.0.0-beta.25",
-    "pg": "^8.11.3",
+    "pg": "^8.16.3",
     "postcss": "8.5.1",
     "postgres": "^3.4.6",
     "prisma": "^6.17.1",
@@ -31,6 +34,5 @@
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
     "zod": "^3.25.17"
-  },
-  "devDependencies": {}
+  }
 }
