--- a/amplify.yml
+++ b/amplify.yml
@@ -20,3 +20,7 @@ env:
   variables:
     SKIP_ENV_VALIDATION: "1"
     NODE_ENV: production
+compute:
+  resourceType: ssr
+  serverSettings:
+    runtime: nodejs18
