--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,9 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
 .env
+.env.local
+.env.production
 
 # vercel
 .vercel
@@ -36,3 +37,5 @@ yarn-error.log*
 next-env.d.ts
 
 /generated/prisma
+
+
